R4/Files/Templates/Designs/R4/Assets/_src/scss/1-base/_utilities.scss
$custom-font-sizes: (
	7: .875rem,
	8: .75rem,
	9: .5rem
);

// Merge the maps
$font-sizes: map-merge($font-sizes, $custom-font-sizes);

$utilities: (
	"position": (
		property: position,
		responsive: true,
		values: static relative absolute fixed sticky
	),
	"font-size": (
		rfs: true,
		property: font-size,
		responsive: true,
		class: fs,
		values: $font-sizes
	),
	"opacity": (
		property: opacity,
		class: opacity,
		state: hover,
		values: ( 0: 0, 25: .25, 50: .5, 75: .75, 100: 1 )
	),
	"min-viewport-height": (
		responsive: true,
		property: min-height,
		class: min-vh,
		values: (100: 100vh, 75: 75vh, 50: 50vh, 25: 25vh)
	),
);

$positions: static, relative, absolute, fixed, sticky;

@each $breakpoint in map-keys($grid-breakpoints) {
	@include media-breakpoint-up($breakpoint) {
		$infix: breakpoint-infix($breakpoint, $grid-breakpoints);

		@each $value in $positions {
			.position#{$infix}-#{$value} {
				position: $value !important;
			}
		}
	}
}

// Create outlines on links and buttons to highten a11y

a:focus-visible,
button:focus-visible,
[ role="button" ]:focus-visible,
[ tabindex ]:focus-visible {
	outline: $ally-outline;
}

// If you want to specify your own outline on selected elements

.no-outline:focus-visible {
	outline: none;
}

// We need this to removes the default margin bottom set by the rich text editor

.mb-0-last-child > *:last-child {
	margin-bottom: 0;
}

